--- a/index.html
+++ b/index.html
@@ -32,15 +32,7 @@
                 </div>
             </div>
         </header>
-        <section id="filters">
-            <p>Click to filter: </p>
-            <button data-filter="pop" class="pop-filter">Pop</button>
-            <button data-filter="k-pop" class="k-pop-filter">K-Pop</button>
-            <button data-filter="hip-hop" class="hip-hop-filter">Hip Hop</button>
-            <button data-filter="indie" class="indie-filter">Indie</button>
-            <button data-filter="view-all" class="all-filter">View All</button>
-        </section>
-        <section id="records"></section>
+        <section id="songs"></section>
         <section id="message"></section>
         <section id="pagination"></section>
         <footer>
@@ -48,7 +40,6 @@
         </footer>
     </main>
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="data.js"></script>
     <script src="app.js"></script>
 </body>
