add radio emoji to homepage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <![endif]-->
     <main>
         <header>
-            <h1>EmojiBops</h1>
+            <h1>EmojiBops 📻</h1>
             <div class="heading-content">
                 <div class="header">
                     <h2>A listing of songs depicted through emojis. 💖</h2>
