--- a/index.html
+++ b/index.html
@@ -19,30 +19,25 @@
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <header>
-        <h1>EmojiBops</h1>
-    </header>
-        <main>
-        <section class="sidebar">
-            <div class="header">
-                <h2>A listing of songs depicted through emojis. 💖</h2>
-                <p>Click on the emojis to reveal the song name and click on the record to view
-                    the music video!</p>
+    <main>
+        <header>
+            <h1>EmojiBops</h1>
+            <div class="heading-content">
+                <div class="header">
+                    <h2>A listing of songs depicted through emojis. 💖</h2>
+                    <p>Click on the emojis to reveal the song name and click on the record to view
+                        the music video!</p>
                 </div>
                 <div class="contribute-callout">
                     <p>Want to add to EmojiBops? Head to Github! ✨</p>
                     <a href="https://github.com/brittanyrw/emojibops" target="_blank">Contribute</a>
                 </div>
             </div>
-            <div class="contribute-callout">
-                <p>Want to add to EmojiBops? Head to Github! ✨</p>
-                <a href="https://github.com/brittanyrw/emojiscreen" target="_blank">Contribute</a>
-            </div>
-            <footer>
-                <p>EmojiBops currently has <span></span> songs. 💖</p>
-            </footer>
-        </section>
+        </header>
         <section id="songs"></section>
+        <footer>
+            <p>EmojiBops currently has <span></span> songs. 💖</p>
+        </footer>
     </main>
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
