decrease song title size, update header paragraph

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Emoji Bops</title>
     <meta name="description"
-        content="A listing of songs depicted through emojis. Click on the emojis to reveal the song name and click on the record to view the music video!">
+        content="A listing of songs depicted through emojis. Click on the emojis to reveal the song name and click on the play button to view the music video!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
