Improvement : Add pagination design

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             </div>
         </header>
         <section id="songs"></section>
+        <div id="pagination-container">
+            <div class="pagination">
+                <a href="#"><span>⯇</span></a>
+                <a href="#"><span>1</span></a>
+                <a href="#" class="active"><span>2</span></a>
+                <a href="#"><span>⯈</span></a>
+            </div>
+        </div>
         <footer>
             <p>EmojiBops currently has <span></span> songs. 💖</p>
         </footer>
