add google analytics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html class="no-js" lang="">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-97195950-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-97195950-5');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Emoji Bops</title>
@@ -26,6 +36,9 @@
                 <div class="header">
                     <h2>A listing of songs depicted through emojis. 💖</h2>
                     <p>Click on the emojis to reveal the song name!</p>
+                    <div class="emoji-playlists">
+                                                <a href="https://www.google.com"><i class="fab fa-spotify"></i>Spotify Playlist</a>
+                                            </div>
                 </div>
                 <div class="contribute-callout">
                     <p>Want to add to EmojiBops? Head to Github! ✨</p>
