create expand-all button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <div class="header">
                     <h2>A listing of songs depicted through emojis. 💖</h2>
                     <p>Click on the emojis to reveal the song name!</p>
+                    <button id="expand">Expand all</button>
                 </div>
                 <div class="contribute-callout">
                     <p>Want to add to EmojiBops? Head to Github! ✨</p>
