update Youtube playlist link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <i class="fab fa-spotify"></i>
                             Listen on Spotify
                         </a>
-                        <a href="https://www.youtube.com/watch?v=RXt_lya0gto&amp;list=PLZNYKAau0mPLN9ZzL3OODBUFHvYuVShJ1" target="_blank" class="playlist-links-item">
+                        <a href="https://www.youtube.com/playlist?list=PLZNYKAau0mPLN9ZzL3OODBUFHvYuVShJ1" target="_blank" class="playlist-links-item">
                             <i class="fab fa-youtube"></i>
                             Listen on Youtube
                         </a>
