Added back to top button

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 </div>
             </div>
         </header>
+        <div id='back-to-top'>
+            <i class="fas fa-chevron-up"></i>
+        </div>
         <section id="songs"></section>
         <footer>
             <p>EmojiBops currently has <span></span> songs. 💖</p>
