--- a/index.html
+++ b/index.html
@@ -30,30 +30,32 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <main>
-        <header>
-            <h1>EmojiBops</h1>
-            <div class="heading-content">
-                <div class="header">
-                    <h2>A listing of songs depicted through emojis. 💖</h2>
-                    <p>Click on the emojis to reveal the song name!</p>
-                    <div class="playlist-links">
-                        <a href="https://open.spotify.com/playlist/2EHUrlY5SJssqnD3FJDV6a?si=UGrdw8cZQ1K_cjQ7Ekh04g" target="_blank" class="playlist-links-item">
-                            <i class="fab fa-spotify"></i>
-                            Listen on Spotify
-                        </a>
-                        <a href="https://www.youtube.com/playlist?list=PLZNYKAau0mPLN9ZzL3OODBUFHvYuVShJ1" target="_blank" class="playlist-links-item">
-                            <i class="fab fa-youtube"></i>
-                            Listen on Youtube
-                        </a>
+        <div class="sticky-wrapper">
+            <header>
+                <h1>EmojiBops</h1>
+                <div class="heading-content">
+                    <div class="header">
+                        <h2>A listing of songs depicted through emojis. 💖</h2>
+                        <p>Click on the emojis to reveal the song name!</p>
+                        <div class="playlist-links">
+                            <a href="https://open.spotify.com/playlist/2EHUrlY5SJssqnD3FJDV6a?si=UGrdw8cZQ1K_cjQ7Ekh04g" target="_blank" class="playlist-links-item">
+                                <i class="fab fa-spotify"></i>
+                                Listen on Spotify
+                            </a>
+                            <a href="https://www.youtube.com/playlist?list=PLZNYKAau0mPLN9ZzL3OODBUFHvYuVShJ1" target="_blank" class="playlist-links-item">
+                                <i class="fab fa-youtube"></i>
+                                Listen on Youtube
+                            </a>
+                        </div>
+                    </div>
+                    <div class="contribute-callout">
+                        <p>Want to add to EmojiBops? Head to Github! ✨</p>
+                        <a href="https://github.com/brittanyrw/emojibops" target="_blank">Contribute</a>
                     </div>
                 </div>
-                <div class="contribute-callout">
-                    <p>Want to add to EmojiBops? Head to Github! ✨</p>
-                    <a href="https://github.com/brittanyrw/emojibops" target="_blank">Contribute</a>
-                </div>
-            </div>
-        </header>
-        <section id="songs"></section>
+            </header>
+            <section id="songs"></section>
+        </div>
         <footer>
             <p>EmojiBops currently has <span></span> songs. 💖</p>
         </footer>
