--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
         <section id="songs"></section>
         <footer>
             <p>EmojiBops currently has <span></span> songs. 💖</p>
+            <ul class="footer-list">
+                <li>
+                    <p class="companion-project-link">Movie fan? Check out <a href="https://emojiscreen.com" target="_blank">EmojiScreen</a> 📺</p> 
+                </li>
+                <li>
+                    <p class="companion-project-link">Book lover? Check out <a href="https://emojipages.com" target="_blank">EmojiPages</a> 📚</p>
+                </li>
+            </ul>
         </footer>
     </main>
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
